src/main/metadata-au/objects/BypassTriggerAndRules__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Workflow_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Workflow Rule</label>
        <type>Checkbox</type>
    </fields>
    <label>Bypass Trigger &amp; Rules</label>
</CustomObject>  